Update lint.yml Python install

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,7 +12,7 @@ jobs:
         uses: astral-sh/setup-uv@v6
 
       - name: Set up Python
-        run: uv python install 3.12-slim
+        run: uv python install 3.12
 
       - name: Sync dependencies from pyproject.toml/uv.lock
         run: uv sync
