--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+
+      - name: Set up Python
+        run: uv python install 3.12
+
+      - name: Sync dependencies from pyproject.toml/uv.lock
+        run: uv sync --locked
+        # This is stupid, should have common setup for uv
       - name: Run Pytest
         run: uv run pytest tests
 
